...

      <Header>
        <UserWrapper>
          <UserInfo>
            <Photo source={{ uri: 'https://avatars.githubusercontent.com/u/22238804?v=4' }} />
            <User>
              <UserGreeting>Olá, </UserGreeting>
              <UserName>Gilson</UserName>
            </User>
          </UserInfo>

          <CartContainer onPress={handleShoppingCart}>
            <BadgeCount visible={cart.length < 1 ? false : true}>{cart.length}</BadgeCount>
...
